apps/base/nutritrack/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app-nutritrack
  labels:
    trust.cert-manager.io/inject-bundle: "true"
