apps/base/nutritrack/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nutritrack-redis
  namespace: app-nutritrack
  labels:
    app: nutritrack-redis
spec:
  revisionHistoryLimit: 2
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: nutritrack-redis
  template:
    metadata:
      labels:
        app: nutritrack-redis
    spec:
      containers:
        - name: redis
          image: docker.io/library/redis:7-alpine
          imagePullPolicy: IfNotPresent
          readinessProbe:
            tcpSocket:
              port: 6379
            initialDelaySeconds: 2
            periodSeconds: 5
            failureThreshold: 20
          livenessProbe:
            tcpSocket:
              port: 6379
            initialDelaySeconds: 60
            periodSeconds: 5
            failureThreshold: 20
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
          volumeMounts:
            - mountPath: /data
              name: redisdata
          ports:
            - containerPort: 6379
              name: redis
        - name: exporter
          image: oliver006/redis_exporter:v1.80.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9121
              name: metrics
          readinessProbe:
            httpGet:
              path: /metrics
              port: metrics
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /metrics
              port: metrics
            initialDelaySeconds: 10
            periodSeconds: 30
      volumes:
        - name: redisdata
          persistentVolumeClaim:
            claimName: nutritrack-redis
---
apiVersion: v1
kind: Service
metadata:
  name: nutritrack-redis
  namespace: app-nutritrack
spec:
  ports:
    - name: redis
      port: 6379
      targetPort: redis
  selector:
    app: nutritrack-redis
---
apiVersion: v1
kind: Service
metadata:
  name: nutritrack-redis-metrics
  namespace: app-nutritrack
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "9121"
spec:
  ports:
    - name: metrics
      port: 9121
      targetPort: metrics
  selector:
    app: nutritrack-redis
