apps/base/nutritrack/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nutritrack
  namespace: app-nutritrack
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`nutritrack.cluster.arpa`)
      kind: Rule
      services:
        - name: nutritrack
          namespace: app-nutritrack
          port: http
  tls:
    secretName: traefik-tls
